# simd-sexp

./: Cargo.toml  LICENSE.md  README.md  dune-project
benches/: benches.ml  benches.rs  dune  extract.rs  find_quote_transitions.rs  lib.rs  start_stop_transitions.rs  vector_classifier.rs  xor_masked_adjacent.rs
src/: clmul.rs  dune  escape.rs  escape_csv.rs  exec_parallel.rs  extract.rs  find_quote_transitions.rs  lib.rs  ocaml_parser.rs  parser.rs  parser_parallel.rs  print.rs  ranges.rs  rust_generator.rs  rust_parser.rs  select.rs  select_parallel.rs  sexp_structure.rs  simd_sexp.ml  simd_sexp.mli  start_stop_transitions.rs  structural.rs  tape.ml  tape.mli  utils.rs  varint.rs  vector_classifier.rs  visitor.rs  xor_masked_adjacent.rs
test/: dune  tape.ml  test.ml
