[package]
name = "simd-sexp"
version = "0.1.0"
authors = ["Cheng Sun <_@chengsun.uk>"]
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = []
ocaml = ["dep:ocaml"]

[profile.bench]
debug = true

[dependencies]
ocaml = { version = "0.22", optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "benches"
harness = false
