[package]
name = "simd-sexp"
version = "0.1.0"
authors = ["Cheng Sun <_@chengsun.uk>"]
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["threads", "ocaml"]
ocaml = ["dep:ocaml"]
threads = ["dep:crossbeam-channel", "dep:crossbeam-utils", "dep:num_cpus"]
vtune = ["dep:ittapi", "dep:criterion"]

[profile.bench]
debug = true

[dependencies]
criterion = { version = "0.3", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
crossbeam-utils = { version = "0.8", optional = true }
ittapi = { version = "0.3", optional = true }
memchr = "2"
num_cpus = { version = "1", optional = true }
ocaml = { version = "0.22", optional = true }

[dev-dependencies]
criterion = "0.3"
quickcheck = "1"
rand = "0.8"

[[bench]]
name = "benches"
harness = false

[[bin]]
name = "profile"
path = "bin/profile.rs"
required-features = ["threads", "vtune"]

[[bin]]
name = "select"
path = "bin/select.rs"
required-features = ["threads"]

[[bin]]
name = "simplify"
path = "bin/simplify.rs"

[profile.release]
debug = true
