(rule
 (targets libsimd_sexp.a)
 (deps
  %{project_root}/Cargo.toml
  (glob_files *.rs))
 (action
  (no-infer
   (progn
    (run cargo build --target-dir %{project_root}/../../target --release)
    (run cp %{project_root}/../../target/release/libsimd_sexp.a
      libsimd_sexp.a)))))

(library
 (name simd_sexp)
 (foreign_archives simd_sexp)
 (c_library_flags
  (-lpthread -lc -lm)))
