(rule
 (targets libsimd_sexp.a)
 (deps
  %{project_root}/Cargo.toml
  (glob_files *.rs))
 (action
  (no-infer
   (progn
    (run cargo build --manifest-path %{project_root}/../../Cargo.toml --target-dir %{project_root}/../../target --release)
    (run cp %{project_root}/../../target/release/libsimd_sexp.a
      libsimd_sexp.a)))))

(library
 (name simd_sexp)
 (libraries core)
 (foreign_archives simd_sexp)
 (c_library_flags
  (-lpthread -lc -lm))
 (preprocess
  (pps ppx_expect ppx_jane)))
